Enable code coverage collection and configure output format in bUnit test project

--- a/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
+++ b/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
@@ -6,6 +6,8 @@
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
         <RootNamespace>TailwindBlog.Web</RootNamespace>
+        <CollectCoverage>true</CollectCoverage>
+        <CoverletOutputFormat>opencover</CoverletOutputFormat>
     </PropertyGroup>
 
     <ItemGroup>
