--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -59,7 +59,7 @@ jobs:
         run: mkdir -p TestResults
 
       - name: Run Tests
-        run: dotnet test --no-restore --no-build --settings runsettings.xml
+        run: dotnet test --no-restore --no-build --logger "trx;LogFileName=$(ProjectName)_$(BuildNumber).trx"
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
