Update test file pattern in dotnet.yml to use `.trx` files

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -82,7 +82,7 @@ jobs:
         if: always()
         with:
           files: |
-            TestResults/**/*.xml
+            TestResults/**/*.trx
 
       - name: Checkout
         uses: actions/checkout@v4
