bug/fix_footercomponent (#38)

--- a/Tests/MyMediator.Tests.Unit/MyMediator.Tests.Unit.csproj
+++ b/Tests/MyMediator.Tests.Unit/MyMediator.Tests.Unit.csproj
@@ -41,7 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\MyMediator\MyMediator.csproj" />
+		<ProjectReference Include="..\..\MyMediator\MyMediator.csproj" />
 	</ItemGroup>
 
 </Project>
