--- a/Tests/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
+++ b/Tests/TailwindBlog.Domain.Tests.Unit/TailwindBlog.Domain.Tests.Unit.csproj
@@ -1,37 +1,39 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <IsTestProject>true</IsTestProject>
+        <OutputType>Exe</OutputType>
+        <RootNamespace>TailwindBlog.Domain</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+        <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
 
     <ItemGroup>
         <Using Include="Xunit" />
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" />
         <PackageReference Include="coverlet.collector" />
         <PackageReference Include="FluentAssertions" />
         <PackageReference Include="JetBrains.Annotations" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="NSubstitute" />
-        <PackageReference Include="xunit.runner.visualstudio" />
-        <PackageReference Include="NetArchTest.Rules" />
+        <PackageReference Include="WaffleGenerator.Bogus" />
         <PackageReference Include="xunit.v3" />
+        <PackageReference Include="xunit.v3.common" />
+        <PackageReference Include="xunit.v3.extensibility.core" />
+        <PackageReference Include="xunit.runner.visualstudio" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
-        <ProjectReference Include="..\TailwindBlog.Web\TailwindBlog.Web.csproj" />
-        <ProjectReference Include="..\TailwindBlog.Persistence.MongoDb\TailwindBlog.Persistence.MongoDb.csproj" />
-    </ItemGroup>
 
-    <ItemGroup>
-      <Content Update="xunit.runner.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+        <ProjectReference Include="..\..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
+
     </ItemGroup>
 
 </Project>
