--- a/Tests/TailwindBlog.Architecture.Tests/TailwindBlog.Architecture.Tests.csproj
+++ b/Tests/TailwindBlog.Architecture.Tests/TailwindBlog.Architecture.Tests.csproj
@@ -1,39 +1,37 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <OutputType>Exe</OutputType>
-        <RootNamespace>TailwindBlog.Domain</RootNamespace>
+        <IsTestProject>true</IsTestProject>
     </PropertyGroup>
-
-    <ItemGroup>
-        <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
-    </ItemGroup>
 
     <ItemGroup>
         <Using Include="Xunit" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Bogus" />
         <PackageReference Include="coverlet.collector" />
         <PackageReference Include="FluentAssertions" />
         <PackageReference Include="JetBrains.Annotations" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="NSubstitute" />
-        <PackageReference Include="WaffleGenerator.Bogus" />
-        <PackageReference Include="xunit.v3" />
-        <PackageReference Include="xunit.v3.common" />
-        <PackageReference Include="xunit.v3.extensibility.core" />
         <PackageReference Include="xunit.runner.visualstudio" />
+        <PackageReference Include="NetArchTest.Rules" />
+        <PackageReference Include="xunit.v3" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
+        <ProjectReference Include="..\..\TailwindBlog.Persistence.MongoDb\TailwindBlog.Persistence.MongoDb.csproj" />
+        <ProjectReference Include="..\..\TailwindBlog.Web\TailwindBlog.Web.csproj" />
+    </ItemGroup>
 
-        <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
-
+    <ItemGroup>
+      <Content Update="xunit.runner.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
