--- a/Tests/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
+++ b/Tests/TailwindBlog.Web.Tests.Bunit/TailwindBlog.Web.Tests.Bunit.csproj
@@ -34,8 +34,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TailwindBlog.Web\TailwindBlog.Web.csproj" />
-        <ProjectReference Include="..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
+        <ProjectReference Include="..\..\TailwindBlog.Domain\TailwindBlog.Domain.csproj" />
+        <ProjectReference Include="..\..\TailwindBlog.Web\TailwindBlog.Web.csproj" />
     </ItemGroup>
 
 </Project>
