--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Run all tests in all test projects
         run: |
           for proj in $(find . -name "*.csproj" -path "*/Tests/*"); do
-            dotnet test "$proj" --logger "trx;LogFileName=TestResults/$(basename $proj .csproj).trx"
+            dotnet test "$proj" --logger "trx;LogFileName=../../TestResults/$(basename $proj .csproj).trx"
           done
 
       - name: Upload Test Results
