--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -62,7 +62,7 @@ jobs:
         run: |
           for proj in $(find . -name "*.csproj" -path "*/Tests/*"); do
             name=$(basename "$proj" .csproj)
-            dotnet test "$proj" --logger "trx;LogFileName=TestResults/${name}.trx"
+            dotnet test "$proj" --logger "trx;LogFileName=${{ github.workspace }}/TestResults/${name}.trx"
           done
 
       - name: Upload Test Results
