feat: add CategoryList, CreateCategory, and EditCategory components for category management

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Components\Features\Category\" />
+      <Folder Include="Components\Features\Categories\" />
     </ItemGroup>
 
     <Target Name="BuildTailwind" BeforeTargets="Build">
