--- a/Tests/Web.Tests.Bunit/Web.Tests.Bunit.csproj
+++ b/Tests/Web.Tests.Bunit/Web.Tests.Bunit.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="FluentAssertions" />
         <PackageReference Include="JetBrains.Annotations" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="Moq" />
         <PackageReference Include="NSubstitute" />
         <PackageReference Include="NSubstitute.Analyzers.CSharp" />
         <PackageReference Include="WaffleGenerator.Bogus" />
