--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,7 +10,7 @@
     <PackageVersion Include="Aspire.Hosting.Redis" Version="9.3.1" />
     <PackageVersion Include="Blazored.SessionStorage" Version="2.4.0" />
     <PackageVersion Include="Bogus" Version="35.6.3" />
-    <PackageVersion Include="bunit" Version="2.0.36-preview" />
+    <PackageVersion Include="bunit" Version="2.0.41-preview" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,6 +25,7 @@
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.6" />
+    <PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="9.0.6" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.6" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.6" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
@@ -47,6 +48,13 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
     <PackageVersion Include="Scalar.AspNetCore" Version="2.2.5" />
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1" />
+    <PackageVersion Include="Syncfusion.Blazor" Version="30.1.38" />
+    <PackageVersion Include="Syncfusion.Blazor.Core" Version="30.1.38" />
+    <PackageVersion Include="Syncfusion.Blazor.Grid" Version="30.1.38" />
+    <PackageVersion Include="Syncfusion.Blazor.Navigations" Version="30.1.38" />
+    <PackageVersion Include="Syncfusion.Blazor.RichTextEditor" Version="30.1.38" />
+    <PackageVersion Include="Syncfusion.Blazor.Spinner" Version="30.1.38" />
+    <PackageVersion Include="Syncfusion.Blazor.Themes" Version="30.1.38" />
     <PackageVersion Include="Testcontainers.MongoDb" Version="3.8.0" />
     <PackageVersion Include="WaffleGenerator.Bogus" Version="4.2.2" />
     <PackageVersion Include="xunit.v3" Version="2.0.3" />
