--- a/Persistence.MongoDb/Persistence.MongoDb.csproj
+++ b/Persistence.MongoDb/Persistence.MongoDb.csproj
@@ -10,9 +10,12 @@
     <ItemGroup>
         <PackageReference Include="Mapster" />
         <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" />
         <PackageReference Include="MongoDB.Driver" />
         <PackageReference Include="Microsoft.Extensions.Configuration" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+        <PackageReference Include="Microsoft.Extensions.Options" />
     </ItemGroup>
 
     <ItemGroup>
