--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -4,10 +4,12 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <UserSecretsId>6fd3c1c9-0bfb-4874-bda7-8b93ad7ac2c5</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Domain\Domain.csproj" />
+        <ProjectReference Include="..\Persistence.MongoDb\Persistence.MongoDb.csproj" />
         <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
     </ItemGroup>
 
@@ -16,15 +18,12 @@
       <PackageReference Include="FluentValidation" />
       <PackageReference Include="Mapster" />
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+      <PackageReference Include="Syncfusion.Blazor" />
     </ItemGroup>
 
     <ItemGroup>
         <InternalsVisibleTo Include="Web.Tests.Bunit" />
         <InternalsVisibleTo Include="Architecture.Tests" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Components\Features\Categories\" />
     </ItemGroup>
 
     <Target Name="BuildTailwind" BeforeTargets="Build">
