--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -9,7 +9,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Domain\Domain.csproj"/>
-		<ProjectReference Include="..\Persistence.MongoDb\Persistence.MongoDb.csproj"/>
 		<ProjectReference Include="..\Persistence.Postgres\Persistence.Postgres.csproj"/>
 		<ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj"/>
 	</ItemGroup>
@@ -18,6 +17,7 @@
 		<PackageReference Include="Blazored.SessionStorage"/>
 		<PackageReference Include="FluentValidation"/>
 		<PackageReference Include="Mapster"/>
+		<PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>
 		<PackageReference Include="Syncfusion.Blazor"/>
 	</ItemGroup>
