--- a/Tests/Web.Tests.Bunit/Web.Tests.Bunit.csproj
+++ b/Tests/Web.Tests.Bunit/Web.Tests.Bunit.csproj
@@ -39,4 +39,8 @@
         <ProjectReference Include="..\..\Web\Web.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Components\Features\Articles\" />
+    </ItemGroup>
+
 </Project>
