--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Bogus"/>
 		<PackageReference Include="FluentValidation"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore"/>
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions"/>
 		<PackageReference Include="MongoDB.Driver"/>
 		<PackageReference Include="WaffleGenerator.Bogus"/>
