--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,82 +1,81 @@
 <Project>
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
-    <NoWarn>$(NoWarn);NU1507</NoWarn>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.3.1" />
-    <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.3.1" />
-    <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.1" />
-    <PackageVersion Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
-    <PackageVersion Include="Blazored.SessionStorage" Version="2.4.0" />
-    <PackageVersion Include="Bogus" Version="35.6.3" />
-    <PackageVersion Include="bunit" Version="2.0.41-preview" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageVersion>
-    <PackageVersion Include="FluentAssertions" Version="[7.2.0]" />
-    <PackageVersion Include="FluentValidation" Version="12.0.0" />
-    <PackageVersion Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
-    <PackageVersion Include="Mapster" Version="7.4.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.3" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.QuickGrid" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
-    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.6.0" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.3.1" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageVersion Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
-    <PackageVersion Include="MongoDB.Bson" Version="3.4.0" />
-    <PackageVersion Include="MongoDB.Driver" Version="3.4.0" />
-    <PackageVersion Include="Moq" Version="4.20.72" />
-    <PackageVersion Include="NetArchTest.Rules" Version="1.3.2" />
-    <PackageVersion Include="NSubstitute" Version="5.3.0" />
-    <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17" />
-    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-    <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
-    <PackageVersion Include="Scalar.AspNetCore" Version="2.2.5" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1" />
-    <PackageVersion Include="Syncfusion.Blazor" Version="30.1.38" />
-    <PackageVersion Include="Syncfusion.Blazor.Core" Version="30.1.38" />
-    <PackageVersion Include="Syncfusion.Blazor.Grid" Version="30.1.38" />
-    <PackageVersion Include="Syncfusion.Blazor.Navigations" Version="30.1.38" />
-    <PackageVersion Include="Syncfusion.Blazor.RichTextEditor" Version="30.1.38" />
-    <PackageVersion Include="Syncfusion.Blazor.Spinner" Version="30.1.38" />
-    <PackageVersion Include="Syncfusion.Blazor.Themes" Version="30.1.38" />
-    <PackageVersion Include="Testcontainers.MongoDb" Version="3.8.0" />
-    <PackageVersion Include="WaffleGenerator.Bogus" Version="4.2.2" />
-    <PackageVersion Include="xunit.v3" Version="2.0.3" />
-    <PackageVersion Include="xunit.v3.core" Version="2.0.3" />
-    <PackageVersion Include="xunit.v3.common" Version="2.0.3" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageVersion>
-    <PackageVersion Include="xunit.v3.extensibility.core" Version="2.0.3" />
-    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.5" />
-  </ItemGroup>
+	<PropertyGroup>
+		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+		<CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
+		<NoWarn>$(NoWarn);NU1507</NoWarn>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageVersion Include="Aspire.Hosting.AppHost" Version="9.4.0"/>
+		<PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.4.0"/>
+		<PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.0"/>
+		<PackageVersion Include="Auth0.AspNetCore.Authentication" Version="1.5.0"/>
+		<PackageVersion Include="Blazored.SessionStorage" Version="2.4.0"/>
+		<PackageVersion Include="Bogus" Version="35.6.3"/>
+		<PackageVersion Include="bunit" Version="2.0.41-preview"/>
+		<PackageVersion Include="coverlet.collector" Version="6.0.4">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageVersion>
+		<PackageVersion Include="FluentAssertions" Version="[7.2.0]"/>
+		<PackageVersion Include="FluentValidation" Version="12.0.0"/>
+		<PackageVersion Include="JetBrains.Annotations" Version="2025.2.0"/>
+		<PackageVersion Include="Mapster" Version="7.4.0"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.3"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.QuickGrid" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5"/>
+		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4"/>
+		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.7.0"/>
+		<PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.7"/>
+		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.4.0"/>
+		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
+		<PackageVersion Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0"/>
+		<PackageVersion Include="MongoDB.Bson" Version="3.4.2"/>
+		<PackageVersion Include="MongoDB.Driver" Version="3.4.2"/>
+		<PackageVersion Include="Moq" Version="4.20.72"/>
+		<PackageVersion Include="NetArchTest.Rules" Version="1.3.2"/>
+		<PackageVersion Include="NSubstitute" Version="5.3.0"/>
+		<PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17"/>
+		<PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
+		<PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0"/>
+		<PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0"/>
+		<PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0"/>
+		<PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0"/>
+		<PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0"/>
+		<PackageVersion Include="Scalar.AspNetCore" Version="2.2.5"/>
+		<PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1"/>
+		<PackageVersion Include="Syncfusion.Blazor.Core" Version="30.1.38"/>
+		<PackageVersion Include="Syncfusion.Blazor.Grid" Version="30.1.38"/>
+		<PackageVersion Include="Syncfusion.Blazor.Navigations" Version="30.1.38"/>
+		<PackageVersion Include="Syncfusion.Blazor.RichTextEditor" Version="30.1.38"/>
+		<PackageVersion Include="Syncfusion.Blazor.Spinner" Version="30.1.38"/>
+		<PackageVersion Include="Syncfusion.Blazor.Themes" Version="30.1.38"/>
+		<PackageVersion Include="Testcontainers.MongoDb" Version="3.8.0"/>
+		<PackageVersion Include="WaffleGenerator.Bogus" Version="4.2.2"/>
+		<PackageVersion Include="xunit.v3" Version="3.0.0"/>
+		<PackageVersion Include="xunit.v3.core" Version="3.0.0"/>
+		<PackageVersion Include="xunit.v3.common" Version="3.0.0"/>
+		<PackageVersion Include="xunit.runner.visualstudio" Version="3.1.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageVersion>
+		<PackageVersion Include="xunit.v3.extensibility.core" Version="3.0.0"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.5"/>
+	</ItemGroup>
 </Project>
