--- a/Tests/Architecture.Tests/Architecture.Tests.csproj
+++ b/Tests/Architecture.Tests/Architecture.Tests.csproj
@@ -5,6 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsTestProject>true</IsTestProject>
+		<RootNamespace>Architecture</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
