build: upgrade NuGet packages and project SDKs to .NET 10.0
Update all project files to target net10.0. Update NuGet packages including ASP.NET Core, Entity Framework Core, and Microsoft.Extensions to version 10.0.0-10.0.1. Pin versions centrally in Directory.Packages.props.

--- a/Tests/MyMediator.Tests.Unit/MyMediator.Tests.Unit.csproj
+++ b/Tests/MyMediator.Tests.Unit/MyMediator.Tests.Unit.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<OutputType>Exe</OutputType>
@@ -41,7 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\MyMediator\MyMediator.csproj" />
+		<ProjectReference Include="..\..\MyMediator\MyMediatR.csproj" />
 	</ItemGroup>
 
 </Project>
