--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -1,27 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Bogus"/>
-		<PackageReference Include="FluentValidation"/>
-		<PackageReference Include="Microsoft.EntityFrameworkCore"/>
-		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions"/>
-		<PackageReference Include="MongoDB.Driver"/>
-		<PackageReference Include="WaffleGenerator.Bogus"/>
+		<PackageReference Include="Bogus" />
+		<PackageReference Include="FluentValidation" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
+		<PackageReference Include="MongoDB.Driver" />
+		<PackageReference Include="WaffleGenerator.Bogus" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<InternalsVisibleTo Include="Domain.Tests.Unit"/>
-		<InternalsVisibleTo Include="Architecture.Tests"/>
+		<InternalsVisibleTo Include="Domain.Tests.Unit" />
+		<InternalsVisibleTo Include="Architecture.Tests" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\MyMediator\MyMediator.csproj"/>
+		<ProjectReference Include="..\MyMediator\MyMediatR.csproj" />
 	</ItemGroup>
 
 </Project>
