--- a/MyMediator/MyMediatR.csproj
+++ b/MyMediator/MyMediatR.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="MyMediator.Tests.Unit"/>
+        <InternalsVisibleTo Include="MyMediatR.Tests.Unit"/>
         <InternalsVisibleTo Include="TailwindBlog.Architecture.Tests"/>
     </ItemGroup>
 
